# tree-sitter-djot

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  TODO.md  binding.gyp  example-file  grammar.js  grammar.js~  log.html  m.md  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.claude/memory/: MEMORY.md  feedback_single_parser.md  project_nested_bracket_bug.md  project_perf_analysis_2026_04.md
bindings/go/: binding.go
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_djot/: __init__.py  binding.c
bindings/rust/: lib.rs
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: .editorconfig  syntax.txt  syntax_crlf.txt  win_line_endings.txt
test/corpus_failing/: syntax.txt
tree-sitter-djot/: .editorconfig  .gitignore  Makefile  binding.gyp  grammar.js  package.json  pyproject.toml  tree-sitter.json
tree-sitter-djot-inline/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-djot-inline/bindings/c/: tree-sitter-YOUR_LANGUAGE_NAME.h  tree-sitter-YOUR_LANGUAGE_NAME.pc.in  (+1 more)
tree-sitter-djot-inline/queries/: highlights.scm  injections.scm
tree-sitter-djot-inline/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-djot/queries/: context.scm  highlights.scm  injections.scm  textobjects.scm
tree-sitter-djot/src/: grammar.json  node-types.json  parser.c  scanner.c
(+20 files in other folders)
