[package]
name = "tree-sitter-djot"
description = "Djot grammar for the tree-sitter parsing library"
version = "2.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "Djot"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/treeman/tree-sitter-djot"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.0"

[build-dependencies]
cc = "1.0"
